syntax = "proto3";

package alpha.transport.events;

option java_multiple_files = true;
option java_package = "com.alpha.transport.events";
option go_package = "alpha/transport/events;events";

// أحداث السوق (PriceSpike, Halt, Resume)
enum MarketEventType {
  MARKET_EVENT_TYPE_UNSPECIFIED = 0;
  MARKET_EVENT_TYPE_PRICE_SPIKE = 1;
  MARKET_EVENT_TYPE_HALT = 2;
  MARKET_EVENT_TYPE_RESUME = 3;
  MARKET_EVENT_TYPE_LIQUIDITY_DROP = 4;
}

message EventMeta {
  string event_id = 1;
  string trace_id = 2;
  string source = 3;
  int64 timestamp_ms = 4;
  int64 sequence = 5;
}

message PriceSpike {
  string symbol = 1;
  double reference_price = 2;
  double current_price = 3;
  double spike_percent = 4;
  int64 window_ms = 5;
}

message TradingHalt {
  string symbol = 1;
  string venue = 2;
  string reason = 3;
}

message TradingResume {
  string symbol = 1;
  string venue = 2;
}

message LiquidityDrop {
  string symbol = 1;
  double book_depth_before = 2;
  double book_depth_after = 3;
}

message MarketEvent {
  EventMeta meta = 1;
  MarketEventType type = 2;
  oneof payload {
    PriceSpike price_spike = 3;
    TradingHalt halt = 4;
    TradingResume resume = 5;
    LiquidityDrop liquidity_drop = 6;
  }
}
